Fix scrollbars on script editor and add border to distinguish between input and output editors.

--- a/libproxyobject/plugins/ogre/data/scripting/prompt.css
+++ b/libproxyobject/plugins/ogre/data/scripting/prompt.css
@@ -1,8 +1,8 @@
-.command {
-    border-width: 1px 1px 1px 1px;
-    border-color: black;
-    border-style: solid;
-    padding: 0px;
+.ace_scroller {
+    overflow-x: auto;
+}
+.ace_editor .ace_sb {
+    overflow-y: auto;
 }
 
 body {
@@ -13,4 +13,11 @@ div.codeedit {
     min-width: 200px;
     min-height: 200px;
     position: relative;
+}
+
+div.editborder {
+    border-width: 2px;
+    border-color: black;
+    border-style: solid;
+    margin: 10px;
 }
